# bifrost-eos-relay

./: CMakeLists.txt  Dockerfile
.github/workflows/: main.yml
docker/: Dockerfile
libraries/chain/: controller.cpp  merkle.cpp
libraries/chain/include/eosio/chain/: config.hpp  controller.hpp  merkle.hpp
plugins/: CMakeLists.txt
plugins/bridge_plugin/: CMakeLists.txt  bridge_plugin.cpp
plugins/bridge_plugin/bifrost_rpc/: bifrost_rpc.h
plugins/bridge_plugin/bifrost_rpc/ffi/: Cargo.toml
plugins/bridge_plugin/bifrost_rpc/ffi/src/: db.rs  ffi_futures.rs  ffi_types.rs  futures.rs  lib.rs  rpc_calls.rs  scheduler.rs  submit_producers_schedule.rs
plugins/bridge_plugin/include/eosio/bridge_plugin/: bridge_plugin.hpp  ffi_types.hpp
programs/: CMakeLists.txt
programs/nodeos/: CMakeLists.txt  main.cpp
