[package]
name = "bifrost_rpc"
version = "0.5.0"
authors = ["Dengjianping <djptux@gmail.com>"]
edition = "2018"

[lib]
name = "rpc_client"
crate-type =["cdylib"]

[dependencies]
bincode = "1.3.1"
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false, features = ["derive"] }
eos-chain = { git = "https://github.com/bifrost-finance/rust-eos", branch = "master" }
futures = "0.3.6"
once_cell = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34.4"
sp-core = "2.0.0"
subxt = { version = "0.13", package = "substrate-subxt" }

[profile.release]
opt-level = 3 # 3
debug = false # false
