[package]
name = "bifrost_rpc"
version = "0.5.0"
authors = ["Dengjianping <djptux@gmail.com>"]
edition = "2018"

[lib]
name = "rpc_client"
crate-type =["cdylib"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false, features = ["derive"] }
eos-chain = { git = "https://github.com/bifrost-finance/rust-eos", branch = "master" }
futures = "0.3.5"
once_cell = "1.4.0"
serde_json = "1.0"
sp-core = "2.0.0"
subxt = { version = "0.13", package = "substrate-subxt" }

[profile.release]
opt-level = 3 # 3
debug = false # false

[patch.crates-io]
subxt = { git = "https://github.com/bifrost-finance/substrate-subxt.git", package = "substrate-subxt" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-metadata = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-externalities = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-state-machine = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-storage = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-session = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-staking = { git = "https://github.com/paritytech/substrate.git", branch = "master" }